--- a/spec/fixtures/vcr_cassettes/Api_BoxscoresController/GET_show/nhl/.yml
+++ b/spec/fixtures/vcr_cassettes/Api_BoxscoresController/GET_show/nhl/.yml
@@ -22,20 +22,22 @@ http_interactions:
       - IE=edge,chrome=1
       Content-Type:
       - text/html;charset=iso-8859-1
-      Transfer-Encoding:
-      - chunked
+      Content-Length:
+      - '21010'
+      Accept-Ranges:
+      - bytes
       Date:
-      - Fri, 19 Dec 2014 14:48:47 GMT
+      - Fri, 19 Dec 2014 14:53:26 GMT
       Connection:
       - keep-alive
       Cache-Control:
-      - max-age=300
+      - max-age=218
       P3p:
       - CP="CAO DSP COR CURa ADMa DEVa TAIa PSAa PSDa IVAi IVDi CONi OUR SAMo OTRo
         BUS PHY ONL UNI PUR COM NAV INT DEM CNT STA PRE"
       Set-Cookie:
-      - SWID=291206A0-1437-4AB9-859D-31160A157199; path=/; expires=Thu, 14 Dec 2034
-        14:48:47 GMT; domain=go.com;
+      - SWID=28A2C653-B899-485C-BF7A-EA921061C6DB; path=/; expires=Thu, 14 Dec 2034
+        14:53:26 GMT; domain=go.com;
     body:
       encoding: UTF-8
       string: "<!DOCTYPE html>\n<html xmlns:fb=\"http://www.facebook.com/2008/fbml\">\n<head><script
@@ -949,7 +951,7 @@ http_interactions:
         by the opposing Club. The difference in these numbers is considered the player's
         plus-minus statistic.</span><br /><!-- begin sp links -->\n<div style=\"margin:
         10px 0 0 0;\">\n<!-- CONTENT: boxscore990990, SPORT: nhl--><div style=\"margin:0px
-        0px 5px 0px; text-align: center; width: 614px;\"><ins id=\"splinks-85856\"></ins>\n
+        0px 5px 0px; text-align: center; width: 614px;\"><ins id=\"splinks-57517\"></ins>\n
         \       <script type=\"text/javascript\">\n            (function($) {\n                //
         config params\n                var width = '614',\n                    height
         = '300',\n                    client = 'ca-espn-q-game',\n                    channel
@@ -957,7 +959,7 @@ http_interactions:
         iframe HTML\n                function buildIframe(width, height, client, channel)
         {\n                    var path = 'http://sports-ak.espn.go.com/espn/sponsoredlinks/adsense/iframeCached';\n
         \                   // pass params as the hash as they are only needed on
-        the client\n                    var hash = '85856|' + width + '|' + height
+        the client\n                    var hash = '57517|' + width + '|' + height
         + '|' + client + '|' + channel + '|' + lang;\n                    var iframe
         = '<iframe seamless scrolling=\"no\" frameborder=\"0\" height=\"' + height
         + '\" width=\"' + width + '\" src=\"' + path + '#' + hash + '\"></iframe>';\n
@@ -973,11 +975,11 @@ http_interactions:
         {\n                        if (loc.country.isoCode !== 'usa' || espn.core.mobileApple
         || espn.core.android) {\n                            // outside US or not
         on desktop\n                            client = 'ca-espn-nq';\n                        }\n
-        \                       $('#splinks-85856').html(buildIframe(width, height,
-        client, channel));\n                    }).fail(function() {\n                        $('#splinks-85856').html(buildIframe(width,
+        \                       $('#splinks-57517').html(buildIframe(width, height,
+        client, channel));\n                    }).fail(function() {\n                        $('#splinks-57517').html(buildIframe(width,
         height, 'ca-espn-nq', channel));\n                    });\n                }
         else {\n                    // can't locate them, assume they are outside
-        US\n                    $('#splinks-85856').html(buildIframe(width, height,
+        US\n                    $('#splinks-57517').html(buildIframe(width, height,
         'ca-espn-nq', channel));\n                }\n            })(jQuery);\n        </script>\n
         \   </div></div>\n<!-- end sp links -->\n\n<div id=\"caster\"></div>\n\n<script
         type=\"text/javascript\">\n\tvar settings = {\n\t\t\"gameId\": 400564807,\n\t\t\"seasonType\":
@@ -1225,7 +1227,7 @@ http_interactions:
         a};c=document.getElementsByTagName(\"script\")[0];b&&c.parentNode.insertBefore(window.grvMakeScript(b),c);})();\n
         \ //]]>\n</script></body>\n</html>"
     http_version: 
-  recorded_at: Fri, 19 Dec 2014 14:48:49 GMT
+  recorded_at: Fri, 19 Dec 2014 14:53:28 GMT
 - request:
     method: get
     uri: http://espn.go.com/nhl/recap?gameId=400564807
@@ -1248,20 +1250,22 @@ http_interactions:
       - IE=edge,chrome=1
       Content-Type:
       - text/html;charset=iso-8859-1
-      Transfer-Encoding:
-      - chunked
+      Content-Length:
+      - '19548'
+      Accept-Ranges:
+      - bytes
       Date:
-      - Fri, 19 Dec 2014 14:48:48 GMT
+      - Fri, 19 Dec 2014 14:53:26 GMT
       Connection:
       - keep-alive
       Cache-Control:
-      - max-age=300
+      - max-age=22
       P3p:
       - CP="CAO DSP COR CURa ADMa DEVa TAIa PSAa PSDa IVAi IVDi CONi OUR SAMo OTRo
         BUS PHY ONL UNI PUR COM NAV INT DEM CNT STA PRE"
       Set-Cookie:
-      - SWID=AF837427-B737-4998-B13A-A40A4685D7DF; path=/; expires=Thu, 14 Dec 2034
-        14:48:48 GMT; domain=go.com;
+      - SWID=CFB0B41A-9059-4E35-B9D2-81E6C8D2C5F4; path=/; expires=Thu, 14 Dec 2034
+        14:53:26 GMT; domain=go.com;
     body:
       encoding: UTF-8
       string: "<!DOCTYPE html>\n<html xmlns:fb=\"http://www.facebook.com/2008/fbml\">\n<head><script
@@ -2058,5 +2062,5 @@ http_interactions:
         a};c=document.getElementsByTagName(\"script\")[0];b&&c.parentNode.insertBefore(window.grvMakeScript(b),c);})();\n
         \ //]]>\n</script></body>\n</html>"
     http_version: 
-  recorded_at: Fri, 19 Dec 2014 14:48:50 GMT
+  recorded_at: Fri, 19 Dec 2014 14:53:28 GMT
 recorded_with: VCR 2.9.3
